--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="main_video">上传视频</string>
     <string name="main_price">售货价</string>
     <string name="main_shopping_cart">购物车</string>
+
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
