--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,6 @@
     <string name="share_qq">QQ</string>
     <string name="share_qzone">QQ空间</string>
 
-
     <string name="notice_weixin_not_install">你未安装微信！</string>
     <string name="notice_qq_not_install">你未安装QQ！</string>
     <string name="msg_clipping_image">正在裁剪图片</string>
@@ -96,4 +95,7 @@
     <string name="success_save">已成功保存到本地</string>
     <string name="no_name_tip">名字不能为空，请填写</string>
     <string name="not_filled">未填写</string>
+
+    <string name="opera_confirm">确定</string>
+    <string name="opera_quit">退出</string>
 </resources>
