--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,8 @@
     <string name="opera_confirm">确定</string>
     <string name="opera_quit">退出</string>
 
+    <string name="Id_card">/^[1-9]\d{7}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}$|^[1-9]\d{5}[1-9]\d{3}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}([0-9]|X)$/</string>
+    <string name="phone">^[1]([3][0-9]{1}|59|58|88|89)[0-9]{8}$</string>
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">释放立即刷新</string>
     <string name="xlistview_header_hint_loading">正在刷新...</string>
