--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">66boss</string>
     <string name="loading">数据加载中， 请稍候&#8230;</string>
     <string name="compose">正在合成</string>
+    <string name="check_fail">很抱歉！您的代理申请未通过审核，
+        您可以修改资料重新申请代理</string>
+    <string name="check_sucess">恭喜你！您的代理申请通过了审核，
+        您可以开始代理啦</string>
     <!--QQ,微信开放平台-->
     <!--<string name="weixin_app_id2">wxac34006c18243289</string>-->
     <!--<string name="weixin_app_id">wxcd7d86f3f2c04077</string>-->
@@ -106,6 +110,7 @@
 
     <string name="Id_card">/^[1-9]\d{7}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}$|^[1-9]\d{5}[1-9]\d{3}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}([0-9]|X)$/</string>
     <string name="phone">^[1]([3][0-9]{1}|59|58|88|89)[0-9]{8}$</string>
+    <string name="num">/^\d{6}(18|19|20)?\d{2}(0[1-9]|1[012])(0[1-9]|[12]\d|3[01])\d{3}(\d|[xX])$/</string>
     <string name="xlistview_header_hint_normal">下拉刷新</string>
     <string name="xlistview_header_hint_ready">释放立即刷新</string>
     <string name="xlistview_header_hint_loading">正在刷新...</string>
